--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
     "vue3-toastify": "^0.0.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz",
     "zoom-vanilla.js": "^2.0.6"
   },
   "devDependencies": {
